// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Place Order button should be disabled if there is any error in billing address 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "discount_summaries": Array [],
      "sub_total": 15,
      "total": 20,
    }
  }
  checkout={
    Object {
      "billingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "errors": Object {
          "first_name": "please fill the details",
        },
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "currency": "GBP",
      "currentStep": 4,
      "customer": Object {
        "email": "customer@example.com",
        "external_id": "123",
        "name": "John Doe",
      },
      "error": false,
      "lineItems": Array [
        Object {
          "currency": "GBP",
          "paid_price_inc_tax": "10",
          "quantity": 3,
          "retail_price_inc_tax": "10",
          "sku": "SK840763631-2",
          "tax_amount": 0,
          "tax_percentage": 0,
          "title": "Textured Long T Shirt",
        },
      ],
      "loading": false,
      "paid_price_inc_tax": "0105.45",
      "paymentMethod": Object {
        "collapsed": false,
        "completed": false,
      },
      "request_uuid": 6765757657657,
      "retail_price_inc_tax": "0105.45",
      "reviewOrder": Object {
        "collapsed": true,
        "completed": false,
      },
      "shippingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "shippingMethod": Object {
        "collapsed": false,
        "completed": true,
        "id": "2",
        "name": "UPS Next Day",
        "paid_price_inc_tax": 5.45,
        "reference": "ups_next_day",
        "retail_price_inc_tax": 5.45,
        "sku": "ups_next_day",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
      "tax_amount": 0,
    }
  }
  dispatch={[MockFunction]}
  order={
    Object {
      "cardErrors": false,
      "cardTokenRequested": false,
    }
  }
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="u-sticky c-cart-summary"
    >
      <dl
        aria-label="Subtotal"
      >
        <dt>
           Total Price: 
        </dt>
        <dd>
           £
          15.00
           
        </dd>
      </dl>
      <dl
        aria-label="Shipping cost"
      >
        <dt>
           Shipping costs: 
        </dt>
        <dd>
           
          Loading shipping cost...
           
        </dd>
      </dl>
      <dl
        aria-label="Total"
        className="u-bold"
      >
        <dt>
           TOTAL: 
        </dt>
        <dd>
           £
          20.00
           
        </dd>
      </dl>
      <dl>
        <dt
          className="c-cart-summary__VAT"
        >
          * Including VAT
        </dt>
      </dl>
    </div>
  </Sticker>
  <div
    className="c-cart-summary-buttons"
  >
    <Link
      href="/"
    >
      <Button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button--sml"
        label="Continue shopping"
        onClick={[Function]}
        status="primary"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue Shopping"
            className="c-cart-summary__buttons--continue o-button--sml o-button o-button--primary"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue shopping
          </button>
        </div>
      </Button>
    </Link>
    <Button
      aria-label="Place Order"
      className="c-cart-summary__buttons--proceed o-button--sml"
      disabled={true}
      id="place_order"
      label="Place Order"
      status="disabled"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          aria-label="Place Order"
          className="c-cart-summary__buttons--proceed o-button--sml o-button o-button--disabled o-button--disabled"
          disabled={true}
          id="place_order"
          role="button"
          tabIndex="0"
          type="button"
        >
          Place Order
        </button>
      </div>
    </Button>
  </div>
</CheckoutCartTotal>
`;

exports[`Place Order button should be disabled if there is any error in card details 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "discount_summaries": Array [],
      "sub_total": 15,
      "total": 20,
    }
  }
  checkout={
    Object {
      "billingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "errors": Object {},
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "currency": "GBP",
      "currentStep": 4,
      "customer": Object {
        "email": "customer@example.com",
        "external_id": "123",
        "name": "John Doe",
      },
      "error": false,
      "lineItems": Array [
        Object {
          "currency": "GBP",
          "paid_price_inc_tax": "10",
          "quantity": 3,
          "retail_price_inc_tax": "10",
          "sku": "SK840763631-2",
          "tax_amount": 0,
          "tax_percentage": 0,
          "title": "Textured Long T Shirt",
        },
      ],
      "loading": false,
      "paid_price_inc_tax": "0105.45",
      "paymentMethod": Object {
        "collapsed": false,
        "completed": false,
      },
      "request_uuid": 6765757657657,
      "retail_price_inc_tax": "0105.45",
      "reviewOrder": Object {
        "collapsed": true,
        "completed": false,
      },
      "shippingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "shippingMethod": Object {
        "collapsed": false,
        "completed": true,
        "id": "2",
        "name": "UPS Next Day",
        "paid_price_inc_tax": 5.45,
        "reference": "ups_next_day",
        "retail_price_inc_tax": 5.45,
        "sku": "ups_next_day",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
      "tax_amount": 0,
    }
  }
  dispatch={[MockFunction]}
  order={
    Object {
      "cardErrors": true,
      "cardTokenRequested": false,
    }
  }
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="u-sticky c-cart-summary"
    >
      <dl
        aria-label="Subtotal"
      >
        <dt>
           Total Price: 
        </dt>
        <dd>
           £
          15.00
           
        </dd>
      </dl>
      <dl
        aria-label="Shipping cost"
      >
        <dt>
           Shipping costs: 
        </dt>
        <dd>
           
          Loading shipping cost...
           
        </dd>
      </dl>
      <dl
        aria-label="Total"
        className="u-bold"
      >
        <dt>
           TOTAL: 
        </dt>
        <dd>
           £
          20.00
           
        </dd>
      </dl>
      <dl>
        <dt
          className="c-cart-summary__VAT"
        >
          * Including VAT
        </dt>
      </dl>
    </div>
  </Sticker>
  <div
    className="c-cart-summary-buttons"
  >
    <Link
      href="/"
    >
      <Button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button--sml"
        label="Continue shopping"
        onClick={[Function]}
        status="primary"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue Shopping"
            className="c-cart-summary__buttons--continue o-button--sml o-button o-button--primary"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue shopping
          </button>
        </div>
      </Button>
    </Link>
    <Button
      aria-label="Place Order"
      className="c-cart-summary__buttons--proceed o-button--sml"
      disabled={true}
      id="place_order"
      label="Place Order"
      status="disabled"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          aria-label="Place Order"
          className="c-cart-summary__buttons--proceed o-button--sml o-button o-button--disabled o-button--disabled"
          disabled={true}
          id="place_order"
          role="button"
          tabIndex="0"
          type="button"
        >
          Place Order
        </button>
      </div>
    </Button>
  </div>
</CheckoutCartTotal>
`;

exports[`renders payment errors 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "discount_summaries": Array [],
      "shipping_method": Object {
        "total": 5,
      },
      "sub_total": 15,
      "total": 20,
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {},
    }
  }
  order={
    Object {
      "paymentError": "Payment authentication failed",
    }
  }
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="u-sticky c-cart-summary"
    >
      <dl
        aria-label="Subtotal"
      >
        <dt>
           Total Price: 
        </dt>
        <dd>
           £
          15.00
           
        </dd>
      </dl>
      <dl
        aria-label="Shipping cost"
      >
        <dt>
           Shipping costs: 
        </dt>
        <dd>
           
          £5.00
           
        </dd>
      </dl>
      <dl
        aria-label="Total"
        className="u-bold"
      >
        <dt>
           TOTAL: 
        </dt>
        <dd>
           £
          20.00
           
        </dd>
      </dl>
      <dl>
        <dt
          className="c-cart-summary__VAT"
        >
          * Including VAT
        </dt>
      </dl>
      <div
        className="c-checkout-cart-total__payment-error"
      >
        Payment authentication failed
      </div>
    </div>
  </Sticker>
  <div
    className="c-cart-summary-buttons"
  >
    <Link
      href="/"
    >
      <Button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button--sml"
        label="Continue shopping"
        onClick={[Function]}
        status="primary"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue Shopping"
            className="c-cart-summary__buttons--continue o-button--sml o-button o-button--primary"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue shopping
          </button>
        </div>
      </Button>
    </Link>
    <Button
      className="c-cart-summary__buttons--proceed o-button--sml"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          className="c-cart-summary__buttons--proceed o-button--sml o-button"
          disabled={false}
          role="button"
          tabIndex="0"
          type="button"
        />
      </div>
    </Button>
  </div>
</CheckoutCartTotal>
`;

exports[`renders the cart's total, subtotal and shipping cost 1`] = `
<CheckoutCartTotal
  cart={
    Object {
      "discount_summaries": Array [],
      "shipping_method": Object {
        "total": 5,
      },
      "sub_total": 15,
      "total": 20,
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {},
    }
  }
  order={Object {}}
  title="Checkout Cart Summary"
>
  <Sticker>
    <div
      aria-label="Cart total summary"
      className="u-sticky c-cart-summary"
    >
      <dl
        aria-label="Subtotal"
      >
        <dt>
           Total Price: 
        </dt>
        <dd>
           £
          15.00
           
        </dd>
      </dl>
      <dl
        aria-label="Shipping cost"
      >
        <dt>
           Shipping costs: 
        </dt>
        <dd>
           
          £5.00
           
        </dd>
      </dl>
      <dl
        aria-label="Total"
        className="u-bold"
      >
        <dt>
           TOTAL: 
        </dt>
        <dd>
           £
          20.00
           
        </dd>
      </dl>
      <dl>
        <dt
          className="c-cart-summary__VAT"
        >
          * Including VAT
        </dt>
      </dl>
    </div>
  </Sticker>
  <div
    className="c-cart-summary-buttons"
  >
    <Link
      href="/"
    >
      <Button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button--sml"
        label="Continue shopping"
        onClick={[Function]}
        status="primary"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue Shopping"
            className="c-cart-summary__buttons--continue o-button--sml o-button o-button--primary"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue shopping
          </button>
        </div>
      </Button>
    </Link>
    <Button
      className="c-cart-summary__buttons--proceed o-button--sml"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          className="c-cart-summary__buttons--proceed o-button--sml o-button"
          disabled={false}
          role="button"
          tabIndex="0"
          type="button"
        />
      </div>
    </Button>
  </div>
</CheckoutCartTotal>
`;
